# xrpl-tx-codec

./: Cargo.toml  README.md
.github/workflows/: README.md
codec/: Cargo.toml
codec/src/: error.rs  field.rs  lib.rs  traits.rs  transaction.rs  types.rs  utils.rs
codec/tests/: package.json  transaction_decoding.rs
utils/: Cargo.toml
utils/res/: definitions.json
utils/src/: lib.rs
