[package]
name = "xrpl-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
xrpl-codec-utils = { path = "../utils" }
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
hex = "*"
hex-literal = "0.3"
xrpl-rust = { git = "https://github.com/sephynox/xrpl-rust", branch = "develop" }