[package]
name = "xrpl-codec-utils"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "*"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["extra-traits"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }